# hserve

./: README.md  pyproject.toml
hserve/: httpserver.py  server.py
