[tool.poetry]
name = "hserve"
version = "0.1.0"
description = ""
authors = ["santoshdahal2016 <webtutor2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
hserve = "hserve.server:start_server"